[project]
name = "dhlive-comfyui"
description = "a comfyui custom node for [a/DH_live](https://github.com/kleinlee/DH_live)"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["dominate", "kaldi_native_fbank", "librosa", "mediapipe", "opencv_python", "pandas", "Pillow", "Requests", "scipy", "sounddevice", "thop", "tqdm", "uvicorn", "visdom", "wandb", "numpy==1.26.0"]

[project.urls]
Repository = "https://github.com/AIFSH/DHLive-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "DHLive-ComfyUI"
Icon = ""
